syntax = "proto3";

import "google/api/annotations.proto";

package bgg;

option go_package = "messages;bggpb";

message Boardgame {
	int32 gid = 1;
	string name = 2;
	uint32 ranking = 3;
	string url = 4;
}

message FindBoardgamesByNameRequest {
	string query = 1;
	uint32 limit = 2;
	uint32 offset = 3;
}

message FindBoardgamesByNameResponse {
	uint32 count = 1;
	Boardgame game = 2;
}

service BoardgameService {
	rpc FindBoardgamesByName(FindBoardgamesByNameRequest) returns (stream FindBoardgamesByNameResponse) {
		option(google.api.http) = {
			// /api/v1/search?query=catan&limit=10&offset=5
			get: "/api/v1/search"
		};
	};
}
